Fixed issue with page being too wide

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,7 +8,7 @@
 
 #wrapper {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   position: relative;
 }
 
